--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
    
    <div id="top-image" class="half-width" >
-        <img  src="images/female/Group 8425.png" alt="an image">
+        <img  src="female/Group 8425.png" alt="an image">
     </div>
 </section>
 </body>
