--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Food Network</title>
 </head>
 <body>
-<section class="felxible-container ">
+<section class="flexible-container ">
 
     <div class="top-text half-width">
         <h1> <span class="orange-color">Skip</span> The Diet,</h1>
@@ -25,5 +25,16 @@
         <img  src="female/Group 8425.png" alt="an image">
     </div>
 </section>
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
