about section added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Food Network</title>
 </head>
 <body>
+                                     <!--Top Section-->
+
 <section class="flexible-container ">
 
     <div class="top-text half-width">
@@ -18,14 +20,27 @@
         <h1>Just Eat Healthy</h1>
         <h1>With Food Network</h1>
         <p>Healthy eating is a way of life, so it’s important to establish routines that are simple, realistically, and ultimately livable!</p> 
-        <a class="link-button" href="https://www.healthyfood.com/">Order Food</a> 
+        <a class="link-button" target="_blank" href="https://www.healthyfood.com/">Order Food</a> 
     </div>
-   
+
    <div id="top-image" class="half-width" >
         <img  src="female/Group 8425.png" alt="an image">
     </div>
 </section>
 
+                                    <!--About Section-->
+                                    
+<section class="flexible-container about-bg">
+<div id="about-me-image" class="half-width" >
+    <img src="female/Person Image.png" alt="Person image">
+</div>
+
+<div class="about-text half-width">
+    <h1> <span class="orange-color" >About Me</span> </h1>
+    <p>We know you’re busy. So we promise to make it easier to eat well, not harder. We live in confusing times, with more product choice than ever, sometimes it’s hard to know what to believe. The intended audience of this website is everyday consumers who want reliable advice on eating more healthily.</p>
+    <a class="link-button" href="https://www.healthyfood.com/about-us/">Contact Me</a>
+</div>              
+</section>
 
 
 
