about section added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </section>
 
                                     <!--About Section-->
-                                    
+
 <section class="flexible-container about-bg">
 <div id="about-me-image" class="half-width" >
     <img src="female/Person Image.png" alt="Person image">
@@ -38,7 +38,7 @@
 <div class="about-text half-width">
     <h1> <span class="orange-color" >About Me</span> </h1>
     <p>We know you’re busy. So we promise to make it easier to eat well, not harder. We live in confusing times, with more product choice than ever, sometimes it’s hard to know what to believe. The intended audience of this website is everyday consumers who want reliable advice on eating more healthily.</p>
-    <a class="link-button" href="https://www.healthyfood.com/about-us/">Contact Me</a>
+    <a class="link-button" target="_blank" href="https://www.healthyfood.com/about-us/">Contact Me</a>
 </div>              
 </section>
 
