Recipie box and Title section added

--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
 <section class="flexible-container ">
 
     <div class="top-text half-width">
+
         <h1> <span class="orange-color">Skip</span> The Diet,</h1>
+
         <h1>Just Eat Healthy</h1>
+
         <h1>With Food Network</h1>
-        <p>Healthy eating is a way of life, so it’s important to establish routines that are simple, realistically, and ultimately livable!</p> 
+
+        <p>Healthy eating is a way of life, so it’s important to establish routines that are simple, realistically, and ultimately livable!</p>
+
         <a class="link-button" target="_blank" href="https://www.healthyfood.com/">Order Food</a> 
     </div>
 
@@ -30,18 +35,69 @@
 
                                     <!--About Section-->
 
-<section class="flexible-container about-bg">
+<section class="flexible-container about-banner">
+
 <div id="about-me-image" class="half-width" >
     <img src="female/Person Image.png" alt="Person image">
 </div>
 
 <div class="about-text half-width">
+
     <h1> <span class="orange-color" >About Me</span> </h1>
+
     <p>We know you’re busy. So we promise to make it easier to eat well, not harder. We live in confusing times, with more product choice than ever, sometimes it’s hard to know what to believe. The intended audience of this website is everyday consumers who want reliable advice on eating more healthily.</p>
+
     <a class="link-button" target="_blank" href="https://www.healthyfood.com/about-us/">Contact Me</a>
 </div>              
 </section>
+                         <!--Recipe Title Section-->
 
+<div class="title-text-recipie">
+
+ <h1>My Recipies</h1>
+
+ <h3> Find and share everyday cooking inspiration on <span class="orange-color">Food Network</span>.</h3>
+ 
+ <h3> Discover recipes, cooks, videos, and how-tos based on the food you love and the friends you follow​.</h3>
+</div>
+                              <!--Recipie Box Section-->
+<section class="flexible-container"> 
+
+<div class="recipie-box width-for-recipies">
+
+    <img class="recipie-imgs-size" src="recipie-img/breakfast.png" alt="Breakfast image">
+    <div class="recipie-text">
+
+        <h1>Recipie Title</h1>
+
+    <p>Breakfast is the most important meal of the day; choose from homemade waffles, granola, corned beef hash, pancakes, omelets or cinnamon buns.</p>
+    </div>
+</div>
+
+
+<div class="recipie-box   width-for-recipies">
+
+<img class="recipie-imgs-size" src="recipie-img/meat.png" alt="meat image">
+
+<div class="recipie-text">
+
+    <h1>Recipie Title</h1>
+
+<p>Breakfast is the most important meal of the day; choose from homemade waffles, granola, corned beef hash, pancakes, omelets or cinnamon buns.</p>
+</div>
+</div>
+<div class="recipie-box   width-for-recipies">
+
+<img class="recipie-imgs-size" src="recipie-img/soup.png" alt="soup image">
+
+<div class="recipie-text">
+
+    <h1>Recipie Title</h1>
+
+<p>Breakfast is the most important meal of the day; choose from homemade waffles, granola, corned beef hash, pancakes, omelets or cinnamon buns.</p>
+</div>
+</div>
+</section>
 
 
 
