--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="recipie-img/vegetables.png" type="fav icon">
     <link rel="stylesheet" href="index.css">
     <title>Food Network</title>
 </head>
@@ -57,7 +58,7 @@
  <h1>My Recipies</h1>
 
  <h3> Find and share everyday cooking inspiration on <span class="orange-color">Food Network</span>.</h3>
- 
+
  <h3> Discover recipes, cooks, videos, and how-tos based on the food you love and the friends you follow​.</h3>
 </div>
                               <!--Recipie Box Section-->
@@ -99,12 +100,24 @@
 </div>
 </section>
 
+                                     <!--Social Media Section -->
+<section class="social-media  flexible-container">
+    <div class="social-media-text">
+        <h1>700k</h1>
+        <p>YouTube Subscribers</p>
+    </div>
 
+    <div class="social-media-text">
+        <h1>2.4m</h1>
+        <p>Instagram Followers</p>
+    </div>
 
+    <div class="social-media-text">
+        <h1>100k</h1>
+        <p>Dribbble Shot Likes</p>
+    </div>
 
-
-
-
+</section>
 
 
 </body>
