Footer Section  added

--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
     </div>
 
 </section>
+                                       <!--Footer Section-->
+<footer class="footer-area">
+    <h3><span class="orange-color">FOOD</span> NETWORK</h3>
+    <h6>Eat Healthy to Live Healthy.Live Healthy to Live Happy.</h6>
+</footer>
+
+
+
 
 
 </body>
