--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <p>Healthy eating is a way of life, so it’s important to establish routines that are simple, realistically, and ultimately livable!</p>
 
-        <a class="link-button" target="_blank" href="https://www.healthyfood.com/">Order Food</a> 
+        <a class="link-button" target="_blank" href="https://www.healthyfood.com/">See More</a> 
     </div>
 
    <div id="top-image" class="half-width" >
@@ -48,7 +48,7 @@
 
     <p>We know you’re busy. So we promise to make it easier to eat well, not harder. We live in confusing times, with more product choice than ever, sometimes it’s hard to know what to believe. The intended audience of this website is everyday consumers who want reliable advice on eating more healthily.</p>
 
-    <a class="link-button" target="_blank" href="https://www.healthyfood.com/about-us/">Contact Me</a>
+    <a class="link-button" target="_blank" href="https://www.healthyfood.com/about-us/">See More</a>
 </div>              
 </section>
                          <!--Recipe Title Section-->
